--- a/Anonymous Chat/public/index.html
+++ b/Anonymous Chat/public/index.html
@@ -168,7 +168,7 @@
 </head>
 <body>
 
-<header>Anonymous Secret Chat</header>
+<header>Anonymous Chat</header>
 
 <div class="container">
   <div id="username-container" class="username-container">
